samples/_failures_safe/1761074457_dfaf5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f100f6f.c: In function ‘main’:
./samples/SAFE/__tmp_4f100f6f.c:150:13: error: expected declaration or statement at end of input
  150 |             input_matrix(&mat1, "A");
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_4f100f6f.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f100f6f.c:150:13: error: expected declaration or statement at end of input
